--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>documaent</title>
+<title>Document</title>
 <link rel="stylesheet" href="style.css">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <div class="frame">
@@ -25,118 +28,195 @@
     </tr>
   </thead>
   <tbody>
-  
     <tr style="--i:1">
       <td>1</td>
-      <td>John Doe</td>
-      <td>USA</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        John Doe
+      </td>
+      <td> <img src="me.png" alt="">USA</td>
       <td>30</td>
       <td>1994-05-15</td>
-      <td>85%</td>
-      <td>Male</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress high" style="width: 85%;">85%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Male"></td>
       <td>+15%</td>
       <td>102</td>
       <td>Project A</td>
     </tr>
-
     <tr style="--i:2">
       <td>2</td>
-      <td>Jane Smith</td>
-      <td>Canada</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Jane Smith
+      </td>
+      <td> <img src="me.png" alt="">Canada</td>
       <td>28</td>
       <td>1996-02-20</td>
-      <td>78%</td>
-      <td>Female</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress medium" style="width: 78%;">78%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Female"></td>
       <td>+10%</td>
       <td>95</td>
       <td>Project B</td>
     </tr>
     <tr style="--i:3">
       <td>3</td>
-      <td>Michael Brown</td>
-      <td>UK</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Michael Brown
+      </td>
+      <td> <img src="me.png" alt="">UK</td>
       <td>35</td>
       <td>1989-09-10</td>
-      <td>92%</td>
-      <td>Male</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress high" style="width: 92%;">92%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Male"></td>
       <td>+20%</td>
       <td>110</td>
       <td>Project C</td>
     </tr>
     <tr style="--i:4">
       <td>4</td>
-      <td>Emily Johnson</td>
-      <td>Australia</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Emily Johnson
+      </td>
+      <td> <img src="me.png" alt="">Australia</td>
       <td>32</td>
       <td>1992-07-25</td>
-      <td>80%</td>
-      <td>Female</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress medium" style="width: 80%;">80%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Female"></td>
       <td>+18%</td>
       <td>105</td>
       <td>Project D</td>
     </tr>
     <tr style="--i:5">
       <td>5</td>
-      <td>David Lee</td>
-      <td>South Korea</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        David Lee
+      </td>
+      <td> <img src="me.png" alt="">US</td>
       <td>29</td>
       <td>1995-03-30</td>
-      <td>75%</td>
-      <td>Male</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress medium" style="width: 75%;">75%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Male"></td>
       <td>+12%</td>
       <td>98</td>
       <td>Project E</td>
     </tr>
     <tr style="--i:6">
       <td>6</td>
-      <td>Sophia Wang</td>
-      <td>China</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Sophia Wang
+      </td>
+      <td> <img src="me.png" alt="">China</td>
       <td>31</td>
       <td>1991-11-05</td>
-      <td>82%</td>
-      <td>Female</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress high" style="width: 82%;">82%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Female"></td>
       <td>+16%</td>
       <td>100</td>
       <td>Project F</td>
     </tr>
     <tr style="--i:7">
-      <td >7</td>
-      <td>Daniel Kim</td>
-      <td>Japan</td>
+      <td>7</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Daniel Kim
+      </td>
+      <td> <img src="me.png" alt="">Japan</td>
       <td>33</td>
       <td>1989-12-15</td>
-      <td>88%</td>
-      <td>Male</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress high" style="width: 88%;">88%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Male"></td>
       <td>+22%</td>
       <td>115</td>
       <td>Project G</td>
     </tr>
     <tr style="--i:8">
-      <td >8</td>
-      <td>Alice Chen</td>
-      <td>India</td>
+      <td>8</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Alice Chen
+      </td>
+      <td> <img src="me.png" alt="">India</td>
       <td>27</td>
       <td>1997-08-20</td>
-      <td>76%</td>
-      <td>Female</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress medium" style="width: 76%;">76%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Female"></td>
       <td>+14%</td>
       <td>99</td>
       <td>Project H</td>
     </tr>
     <tr style="--i:9">
       <td>9</td>
-      <td>Olivia Davis</td>
-      <td>France</td>
+      <td>
+        <div class="circle-box">
+          <img src="men.png" alt="Person">
+        </div>
+        Olivia Davis
+      </td>
+      <td> <img src="me.png" alt="">France</td>
       <td>26</td>
       <td>1998-06-10</td>
-      <td>79%</td>
-      <td>Female</td>
+      <td>
+        <div class="progress-bar">
+          <div class="progress medium" style="width: 79%;">79%</div>
+        </div>
+      </td>
+      <td class="gender" data-gender="Female"></td>
       <td>+17%</td>
       <td>101</td>
       <td>Project I</td>
     </tr>
-    <tr>
-      
   </tbody>
 </table>
 </div>
